--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.8",
     "swagger-ui-express": "^5.0.0",
     "yamljs": "^0.3.0"
